--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -56,6 +60,7 @@ header #header{
     left: 32%;
     font-family: 'Open Sans', sans-serif;
     
+    
 }
 
 .text-overlay h2{
@@ -68,6 +73,13 @@ header #header{
     font-size: 45px;
     margin: 0;
 
+}
+
+
+.text-overlay a {
+    color: white;
+    font-size: 50px;
+    
 }
 
 .size-width{
@@ -89,24 +101,42 @@ section .offer{
     font-size: 85px;
 }
 
-
-section .things .headphone{
-    margin: 0 auto;
-    width: 80%;
-    font-size: 16px;
+.articles{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 40px;
     text-align: justify;
+    align-items: center;
+    justify-content: space-around;
     margin-bottom: 10rem;
 }
 
-section .things .headphone img{
+section .things .products{
+    margin: 0 auto;
+    width: 80%;
+    font-size: 16px;
+    align-items: center;
+    padding: 40px;
+}
+
+section .things .products img{
     border: 1px solid black;
     border-radius: 3px;
 }
 
-section .things .headphone p{
+section .things .products p{
     padding: 20px;
+}
+
+.arrow-up{
+    z-index: 80;
+    padding: 20px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    font-size: 50px;
+}
+
+
+.arrow-up a{
+    color: #2d3436;
+    opacity: .85;
 }
